# nurtured-heart-ai

./: .gitignore  .vercelignore  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  ENV_SETUP.md  LICENSE  LINTING.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  docker-compose.override.yml.example  docker-compose.yml  ollama-init.sh  requirements.txt  setup.sh  start-backend.sh  start-frontend.sh  vercel.json
.github/workflows/: cypress.yml
backend/: .env.example  .gitignore  .ruffignore  .vercelignore  README.md  email_service.py  lint.sh  llm_service.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: __init__.py  index.py
frontend/: .env.example  .eslintrc.json  README.md  cypress.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/cypress/: .eslintrc.js
frontend/cypress/e2e/: api.cy.js  navigation.cy.js
frontend/cypress/e2e/api/: compliment_api.cy.js  email_api.cy.js  health_api.cy.js  llm_api.cy.js
frontend/cypress/e2e/workflow/: compliment.cy.js  external_links.cy.js
frontend/cypress/fixtures/: compliment.json
frontend/src/: App.vue  main.js
frontend/src/components/: AppFooter.vue  ComplimentDisplay.vue  ComplimentForm.vue  NavigationMenu.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: AboutView.vue  FAQView.vue  GeneratorView.vue  WhatIsNHA.vue
ollama/: Dockerfile  ollama-init.sh  start-ollama.sh
